--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img src="https://www.freepik.es/foto-gratis/pareja-haciendo-corazon-manos-orilla-mar_3616343.htm#query=amor%20corazon&position=4&from_view=keyword&track=ais_hybrid&uuid=93ed1004-5648-47d8-9b3e-1231a933977b" alt="Corazón" width="100">
                 <img src="https://www.freepik.es/foto-gratis/pareja-haciendo-corazon-manos-orilla-mar_3616343.htm#query=amor%20corazon&position=4&from_view=keyword&track=ais_hybrid&uuid=93ed1004-5648-47d8-9b3e-1231a933977b" alt="Corazón" width="100">
             </div>
-            <p>Este aniversario será inolvidable, te amo con todo mi corazón. 🧡</p>
+            <p>Este aniversario será inolvidable, te amo con todo mi corazón. 🤍</p>
         </section>
 
         <section id="calendar-section">
